--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         />
         <link rel="icon" type="image/png" href="assets/favicon.png" />
 
-        <title>OGL • Mouse Flowmap</title>
+        <title>waterlike™</title>
         <link href="assets/main.css" rel="stylesheet" />
         <link rel="stylesheet" href="style.css">
     </head>
